Revision history for SPVM
0.9511_01  2021-04-14
        [NON BACKWORD COMPATIBLE CHANGES]
        * new_stack_trace_raw and new_stack_trace don't need file argument. File name got from class information.
          new_stack_trace_raw and new_stack_trace receive method id.
        
        [Before]
        void* (*new_stack_trace_raw)(SPVM_ENV* env, void* exception, const char* class_name, const char* method_name, const char* file, int32_t line);
        void* (*new_stack_trace)(SPVM_ENV* env, void* exception, const char* class_name, const char* method_name, const char* file, int32_t line);
        
        [After]
        void* (*new_stack_trace_raw)(SPVM_ENV* env, void* exception, int32_t method_id, int32_t line);
        void* (*new_stack_trace)(SPVM_ENV* env, void* exception, int32_t method_id, int32_t line);
        * Rename SPVM::Comparator::Object to SPVM::Comparator
0.9510_01  2021-04-14
        [CHANGE]
        * Support cast from class muldim array to interface muldim array
        * Support cast from class muldim array to callback muldim array
        * Add postfix type cast syntax
          
          $num->(string)
          
          This is same as
          
          (string)$num;
        * Improve field access error message.
        * Move compiler native APIs from env->compier_xxx to env->api->compiler->xxx.
          // Compiler API
          void* compiler_api = env->api->compiler;
          
          // New compiler
          void* compiler = compiler_api->new_compiler();
          
          // Compile SPVM
          int32_t status = compiler_api->compile_spvm(compiler, "MyClass");
          
          // Free compiler
          compiler_api->free_compiler(compiler);
        * Move the following native APIs to env->api->runtime->xxx.
          
          get_precompile_method_address
          set_native_method_address
          set_precompile_method_address
          get_method_id_without_signature
          get_method_id_without_signature